feat: add DELETE /api/users/:id API endpoint for deleting users from DB & Firebase
